--- a/requirements.txt
+++ b/requirements.txt
@@ -1,6 +1,8 @@
-asyncpg==0.27.0
-starlette==0.22.0
-uvicorn==0.20.0
-requests==2.28.1
-python-dotenv==0.21.0
-asgi-logger==0.1.0
+aiohttp~=3.8.3
+jinja2~=3.1.2
+asgi_logger~=0.1.0
+asyncpg~=0.27.0
+python-dotenv~=0.21.1
+requests~=2.28.1
+starlette~=0.25.0
+uvicorn~=0.20.0
