--- a/requirements.txt
+++ b/requirements.txt
@@ -1,8 +1,8 @@
 aiohttp~=3.8.3
 jinja2~=3.1.2
 asgi_logger~=0.1.0
-asyncpg~=0.27.0
-python-dotenv~=0.21.1
-requests~=2.28.1
-starlette~=0.25.0
-uvicorn~=0.20.0
+psycopg[binary,pool]~=3.1.8
+python-dotenv~=1.0.0
+requests~=2.28.2
+starlette~=0.26.1
+uvicorn~=0.21.1
