--- a/requirements.txt
+++ b/requirements.txt
@@ -1,7 +1,7 @@
-aiohttp~=3.8.3
+aiohttp~=3.8.4
 jinja2~=3.1.2
 asgi_logger~=0.1.0
-psycopg[binary,pool]~=3.1.8
+psycopg[c,pool]~=3.1.8
 python-dotenv~=1.0.0
 requests~=2.28.2
 starlette~=0.26.1
