--- a/requirements.txt
+++ b/requirements.txt
@@ -1,8 +1,9 @@
 aiohttp~=3.8.4
 jinja2~=3.1.2
 asgi_logger~=0.1.0
-psycopg[c,pool]~=3.1.8
+psycopg[c,pool]~=3.1.9
 python-dotenv~=1.0.0
-requests~=2.28.2
+requests~=2.30.0
 starlette~=0.26.1
-uvicorn~=0.21.1
+uvicorn~=0.22.0
+python_multipart~=0.0.6
