fix env example

--- a/.env.example
+++ b/.env.example
@@ -7,5 +7,6 @@ DB_USER=username
 P2P_NODE_HOST=127.0.0.1
 P2P_NODE_PORT=4130
 DEBUG=1
-TURNSTILE_KEY=0x0
+TURNSTILE_SITE_KEY=0x0
+TURNSTILE_SECRET_KEY=0x0
 #MAINTENANCE_INFO="Database update."
