rework out of sync message

--- a/.env.example
+++ b/.env.example
@@ -6,6 +6,7 @@ DB_SCHEMA=explorer
 DB_USER=username
 P2P_NODE_HOST=127.0.0.1
 P2P_NODE_PORT=4130
+RPC_URL_ROOT=http://127.0.0.1:3033
 DEBUG=1
 TURNSTILE_SITE_KEY=0x0
 TURNSTILE_SECRET_KEY=0x0
