--- a/pyrightconfig.json
+++ b/pyrightconfig.json
@@ -1,3 +1,6 @@
 {
-  "typeCheckingMode": "strict"
+    "typeCheckingMode": "strict",
+    "exclude": [
+        "middleware/asgi_logger",
+    ],
 }
