clear database on mode change instead of dev mode

--- a/.env.example
+++ b/.env.example
@@ -4,6 +4,7 @@ DB_HOST=localhost
 DB_PASS=password
 DB_SCHEMA=explorer
 DB_USER=username
+#DEV_MODE=1
 P2P_NODE_HOST=127.0.0.1
 P2P_NODE_PORT=4130
 P2P_BLOCK_BATCH_SIZE=1
