--- a/requirements.txt
+++ b/requirements.txt
@@ -1,9 +1,10 @@
 aiohttp~=3.8.4
 jinja2~=3.1.2
-psycopg[c,pool]~=3.1.9
+psycopg[binary,pool]~=3.1.9
 python-dotenv~=1.0.0
 requests~=2.31.0
 starlette~=0.28.0
 uvicorn~=0.22.0
 python_multipart~=0.0.6
 minify-html~=0.11.1
+asgiref~=3.7.2
