add env to example and rename conflict

--- a/.env.example
+++ b/.env.example
@@ -5,9 +5,15 @@ DB_PASS=password
 DB_SCHEMA=explorer
 DB_USER=username
 #DEV_MODE=1
+#HOST=127.0.0.1
+#PORT=8000
+#API_HOST=127.0.0.1
+#API_PORT=8001
 P2P_NODE_HOST=127.0.0.1
 P2P_NODE_PORT=4130
 P2P_BLOCK_BATCH_SIZE=1
+API_ROOT=http://127.0.0.1:8001
+API_DOC_ROOT=http://127.0.0.1:8001/api/docs
 RPC_URL_ROOT=http://127.0.0.1:3033
 DEBUG=1
 TURNSTILE_SITE_KEY=0x0
