--- a/.env.example
+++ b/.env.example
@@ -4,6 +4,9 @@ DB_HOST=localhost
 DB_PASS=password
 DB_SCHEMA=explorer
 DB_USER=username
+REDIS_HOST=localhost
+REDIS_PORT=6379
+REDIS_DB=0
 #DEV_MODE=1
 #HOST=127.0.0.1
 #PORT=8000
