update env example

--- a/.env.example
+++ b/.env.example
@@ -18,6 +18,7 @@ P2P_BLOCK_BATCH_SIZE=1
 API_ROOT=http://127.0.0.1:8001
 API_DOC_ROOT=http://127.0.0.1:8001/api/docs
 RPC_URL_ROOT=http://127.0.0.1:3033
+REF_RPC_URL_ROOT=https://api.explorer.aleo.org/v1
 DEBUG=1
 TURNSTILE_SITE_KEY=0x0
 TURNSTILE_SECRET_KEY=0x0
