add redis auth support

--- a/.env.example
+++ b/.env.example
@@ -1,12 +1,14 @@
 PYTHONUNBUFFERED=1
 DB_DATABASE=aleo
 DB_HOST=localhost
-DB_PASS=password
 DB_SCHEMA=explorer
 DB_USER=username
+DB_PASS=password
 REDIS_HOST=localhost
 REDIS_PORT=6379
 REDIS_DB=0
+REDIS_USER=username
+REDIS_PASS=password
 #DEV_MODE=1
 #HOST=127.0.0.1
 #PORT=8000
